Split User class. Now the system has three kinds of user: AbstractUser, ClientUser, FriendUser.

--- a/Client code/MobileSocial/res/layout/activity_main.xml
+++ b/Client code/MobileSocial/res/layout/activity_main.xml
@@ -48,6 +48,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/btn_pause"/>
+    	
+    	<Button 
+            android:text="Load"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btn_load"/>
         
     </LinearLayout>
 
