Finish the implementation of getFriendList().

--- a/Client code/MobileSocial/res/layout/activity_main.xml
+++ b/Client code/MobileSocial/res/layout/activity_main.xml
@@ -8,8 +8,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
 
+    
     <LinearLayout 
-        android:layout_below="@+id/img"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -53,5 +53,12 @@
         android:id="@+id/show"
         android:maxLines = "15"
 		android:scrollbars = "vertical"/>
+   	
 
+    <ImageView 
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/show"
+        android:id="@+id/img"
+        android:background="@drawable/ic_launcher" />
 </RelativeLayout>
