--- a/Client code/MobileSocial/res/layout/activity_login.xml
+++ b/Client code/MobileSocial/res/layout/activity_login.xml
@@ -8,6 +8,10 @@
     android:paddingTop="90dip"
 	android:gravity="center_horizontal">
 
+    <ImageView 
+    	android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+		android:id="@+id/login_portrait"/>
     <LinearLayout
     	android:layout_width="wrap_content"
         android:layout_height="wrap_content"
