--- a/Client code/MobileSocial/res/layout/activity_main.xml
+++ b/Client code/MobileSocial/res/layout/activity_main.xml
@@ -1,64 +1,59 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity" >
+<?xml version="1.0" encoding="UTF-8"?>
+<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@android:id/tabhost"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent" >
 
-    
-    <LinearLayout 
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:id="@+id/linearlayout">
-        
-        <Button 
-            android:text="Start"
-            android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:orientation="vertical" >
+
+        <FrameLayout
+            android:id="@android:id/tabcontent"
+            android:layout_width="fill_parent"
+            android:layout_height="0.0dip"
+            android:layout_weight="1.0" />
+
+        <TabWidget
+            android:id="@android:id/tabs"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/btn_start"/>
-    	<Button 
-            android:text="Stop"
-            android:layout_width="wrap_content"
+            android:layout_weight="0.0"
+            android:visibility="gone" />
+
+        <!-- android:background="@drawable/ic_launcher" -->
+
+        <RadioGroup
+            android:id="@+id/main_radio"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/btn_stop"/>
-    	
-    	<Button 
-            android:text="Play"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/btn_play"/>
-    	
-    	<Button 
-            android:text="Paus"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/btn_pause"/>
-    	
-    	<Button 
-            android:text="Load"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/btn_load"/>
+            android:layout_gravity="bottom"
+            android:gravity="center_vertical"
+            android:orientation="horizontal" >
+
+            <!-- android:drawableTop="@drawable/ic_launcher" -->
+
+            <RadioButton
+                android:id="@+id/main_activity_recent_dialog"
+                style="@style/main_tab_bottom"
+                android:layout_marginTop="2.0dip"
+                android:text="home" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="test"
+                android:id="@+id/main_activity_center_control_btn" />
+
+            <!-- android:drawableTop="@drawable/ic_launcher" -->
+
+            <RadioButton
+                android:id="@+id/main_activity_friend_list"
+                style="@style/main_tab_bottom"
+                android:layout_marginTop="2.0dip"
+                android:text="news" />
+        </RadioGroup>
     </LinearLayout>
-    
-   	<TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/linearlayout"
-        android:text="@string/hello_world"
-        android:id="@+id/show"
-        android:maxLines = "15"
-		android:scrollbars = "vertical"/>
-   	
 
-    <ImageView 
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/show"
-        android:id="@+id/img"
-        android:background="@drawable/ic_launcher" />
-</RelativeLayout>
+</TabHost>
