Add cornor AlertDialog style in loginGuide Activity.

--- a/Client code/MobileSocial/res/values/styles.xml
+++ b/Client code/MobileSocial/res/values/styles.xml
@@ -2,13 +2,25 @@
 
     <!--
         Base application theme, dependent on API level. This theme is replaced
-        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
+        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
+
+
+
+
+
+
     -->
     <style name="AppBaseTheme" parent="android:Theme.Light">
         <!--
             Theme customizations available in newer API levels can go in
             res/values-vXX/styles.xml, while customizations related to
-            backward-compatibility can go here.
+            backward-compatibility can go here.
+
+
+
+
+
+
         -->
     </style>
 
@@ -92,6 +104,7 @@
     <!-- Loginguide Activity LogIn dialog animation -->
     <!-- ********************************* -->
     <style name="LoginDialogAnimation" parent="@android:style/Theme.Dialog">
+        <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:windowAnimationStyle">@style/LoginDialogWindowsAnimation</item>
     </style>
 
@@ -99,5 +112,4 @@
         <item name="android:windowEnterAnimation">@anim/yg_loginguide_page3_login_dialog_anim_slidein</item>
         <item name="android:windowExitAnimation">@android:anim/slide_out_right</item>
     </style>
-
 </resources>
