--- a/Client code/MobileSocial/res/layout/yg_loginguide_page3_login_dialog.xml
+++ b/Client code/MobileSocial/res/layout/yg_loginguide_page3_login_dialog.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/ll"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignParentLeft="true"
     android:layout_alignParentRight="true"
-    android:background="@android:color/white"
-    android:gravity="center"
     android:layout_gravity="center"
+    android:background="@drawable/yg_loginguide_login_dialog_coror_shape"
+    android:gravity="center"
     android:orientation="vertical"
     android:paddingLeft="15dp"
-    android:paddingRight="15dp"
-    android:id="@+id/ll" >
+    android:paddingRight="15dp" >
+
+    <!-- "@android:color/white" -->
 
     <EditText
         android:id="@+id/yg_loginguide_page3_dialog_email"
@@ -18,12 +20,12 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:background="#F5F5F5"
+        android:focusable="true"
         android:gravity="left|center"
         android:hint="Email"
         android:inputType="textEmailAddress"
         android:paddingBottom="10dp"
-        android:paddingTop="10dp" 
-        android:focusable="true"/>
+        android:paddingTop="10dp" />
 
     <EditText
         android:id="@+id/yg_loginguide_page3_dialog_password"
@@ -47,8 +49,9 @@
 
         <Button
             android:id="@+id/yg_loginguide_page3_dialog_forgot"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:background="@android:color/white"
             android:gravity="center"
             android:text="Forgot?"
@@ -56,9 +59,10 @@
 
         <Button
             android:id="@+id/yg_loginguide_page3_dialog_login"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20.0dip"
+            android:layout_weight="1"
             android:background="@android:color/white"
             android:gravity="center"
             android:text="Log In"
