--- a/Client code/MobileSocial/res/layout/yg_loginguide_page3_forget_dialog.xml
+++ b/Client code/MobileSocial/res/layout/yg_loginguide_page3_forget_dialog.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/ll"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:layout_alignParentLeft="true"
     android:layout_alignParentRight="true"
     android:layout_gravity="center"
@@ -12,62 +11,57 @@
     android:paddingLeft="15dp"
     android:paddingRight="15dp" >
 
-    <!-- "@android:color/white" -->
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="Reset your password"
+        android:textSize="8pt"
+        android:textStyle="bold" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="Please enter your email address." />
 
     <EditText
-        android:id="@+id/yg_loginguide_page3_dialog_email"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:background="#F5F5F5"
-        android:focusable="true"
         android:gravity="left|center"
         android:hint="Email"
-        android:inputType="textEmailAddress"
-        android:paddingBottom="10dp"
-        android:paddingLeft="5dp"
-        android:paddingTop="10dp" />
-
-    <EditText
-        android:id="@+id/yg_loginguide_page3_dialog_password"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:background="#F5F5F5"
-        android:gravity="left|center"
-        android:hint="Password"
-        android:inputType="textPassword"
         android:paddingBottom="10dp"
         android:paddingLeft="5dp"
         android:paddingTop="10dp" />
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="60.0dip"
+        android:layout_height="60dp"
         android:layout_gravity="bottom"
         android:layout_marginTop="5dp"
         android:gravity="center"
         android:orientation="horizontal" >
 
         <Button
-            android:id="@+id/yg_loginguide_page3_dialog_forgot"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
+            android:id="@+id/yg_loginguide_page3_forgot__dialog_cancel"
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent"
             android:layout_weight="1"
             android:background="@android:color/white"
             android:gravity="center"
-            android:text="Forgot?"
+            android:text="Cancel"
             android:textColor="#1E90FF" />
 
         <Button
-            android:id="@+id/yg_loginguide_page3_dialog_login"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20.0dip"
+            android:id="@+id/yg_loginguide_page3_forgot__dialog_reset"
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent"
             android:layout_weight="1"
             android:background="@android:color/white"
             android:gravity="center"
-            android:text="Log In"
+            android:text="Reset"
             android:textColor="#1E90FF"
             android:textStyle="bold" />
     </LinearLayout>
