--- a/Client code/MobileSocial/res/values/styles.xml
+++ b/Client code/MobileSocial/res/values/styles.xml
@@ -104,6 +104,11 @@
     <!-- Loginguide Activity LogIn dialog animation -->
     <!-- ********************************* -->
     <style name="LoginDialogAnimation" parent="@android:style/Theme.Dialog">
+        <item name="android:windowIsFloating">true</item><!--是否浮现在activity之上-->
+        <item name="android:windowIsTranslucent">true</item><!--半透明-->
+        <item name="android:backgroundDimEnabled">true</item><!--模糊-->
+        
+        
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:windowAnimationStyle">@style/LoginDialogWindowsAnimation</item>
     </style>
