Successfully merged forget function from old UI to the new UI.

--- a/Client code/MobileSocial/res/layout/yg_loginguide_page3_forget_dialog.xml
+++ b/Client code/MobileSocial/res/layout/yg_loginguide_page3_forget_dialog.xml
@@ -26,12 +26,14 @@
         android:text="Please enter your email address." />
 
     <EditText
+        android:id="@+id/yg_loginguide_page3_forgot__dialog_email"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:background="#F5F5F5"
         android:gravity="left|center"
         android:hint="Email"
+        android:inputType="textEmailAddress"
         android:paddingBottom="10dp"
         android:paddingLeft="5dp"
         android:paddingTop="10dp" />
