Add red dot notification with BadgeView.jar.

--- a/Client code/MobileSocial/res/layout/yg_recent_dialog_item.xml
+++ b/Client code/MobileSocial/res/layout/yg_recent_dialog_item.xml
@@ -9,6 +9,7 @@
     android:orientation="horizontal" >
 
     <RelativeLayout
+        android:id="@+id/yg_recent_dialog_item_outter_layout"
         android:layout_width="fill_parent"
         android:layout_height="65dp" >
 
