--- a/Client code/MobileSocial/res/layout/yg_loginguide_page3_login_dialog.xml
+++ b/Client code/MobileSocial/res/layout/yg_loginguide_page3_login_dialog.xml
@@ -26,8 +26,7 @@
         android:inputType="textEmailAddress"
         android:paddingBottom="10dp"
         android:paddingLeft="5dp"
-        android:paddingTop="10dp"
-        android:text="UserC@126.com" />
+        android:paddingTop="10dp"/>
 
     <EditText
         android:id="@+id/yg_loginguide_page3_dialog_password"
@@ -40,8 +39,7 @@
         android:inputType="textPassword"
         android:paddingBottom="10dp"
         android:paddingLeft="5dp"
-        android:paddingTop="10dp"
-        android:text="6" />
+        android:paddingTop="10dp"/>
 
     <LinearLayout
         android:layout_width="fill_parent"
