Modify recentDialogActivity UI.

--- a/Client code/MobileSocial/res/layout/activity_recent_dialog.xml
+++ b/Client code/MobileSocial/res/layout/activity_recent_dialog.xml
@@ -10,6 +10,7 @@
     	android:layout_width="fill_parent"  
         android:layout_height="fill_parent"   
         android:divider="#DCDCDC"  
+        android:background="#F0EFF5"
         android:dividerHeight="2px" >  
     </com.yg.ui.recentdialog.implementation.RecentDialogListView>  
 
