--- a/Client code/MobileSocial/res/layout/activity_main.xml
+++ b/Client code/MobileSocial/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
                 android:id="@android:id/tabcontent"
                 android:layout_width="fill_parent"
                 android:layout_height="0.0dip"
-                android:layout_weight="1.0" />
+                android:layout_weight="1.0"/>
 
             <TabWidget
                 android:id="@android:id/tabs"
@@ -26,11 +26,13 @@
                 android:layout_weight="0.0"
                 android:visibility="gone" />
 
+            <!-- android:background="#E7E2DE" -->
             <RadioGroup
                 android:id="@+id/main_radio"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
+                android:background="#F8F6F7"
                 android:gravity="center"
                 android:orientation="horizontal"
                 android:paddingBottom="3dp"
@@ -46,7 +48,9 @@
                     android:drawableTop="@color/yg_main_chat_selector"
                     android:gravity="center"
                     android:text="Chats"
-                    android:textSize="12sp" />
+                    android:textColor="@color/yg_main_chat_text_selector"
+                    android:textSize="12sp" 
+                    android:checked="true"/>
 
                 <RadioButton
                     android:id="@+id/main_activity_friend_list"
@@ -58,6 +62,7 @@
                     android:drawableTop="@color/yg_main_friend_selector"
                     android:gravity="center"
                     android:text="Friends"
+                    android:textColor="@color/yg_main_friend_text_selector"
                     android:textSize="12sp" />
             </RadioGroup>
         </LinearLayout>
